// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cluster Mutation Correctly Resolves Create Cluster 1`] = `
Object {
  "data": Object {
    "createCluster": Object {
      "errors": Array [
        Object {
          "message": "Cannot find any endpoints",
        },
      ],
    },
  },
}
`;

exports[`Cluster Mutation Correctly Resolves Destroy Cluster 1`] = `
Object {
  "data": Object {
    "detachCluster": Object {
      "apiVersion": "v1",
      "code": 404,
      "details": Object {
        "group": "hive.openshift.io",
        "kind": "clusterdeployments",
        "name": "managed-cluster",
      },
      "kind": "Status",
      "message": "clusterdeployments.hive.openshift.io \\"managed-cluster\\" not found",
      "metadata": Object {},
      "reason": "NotFound",
      "status": "Failure",
    },
  },
}
`;

exports[`Cluster Mutation Correctly Resolves Destroy Cluster with Failure 1`] = `
Object {
  "data": Object {
    "detachCluster": Object {
      "apiVersion": "v1",
      "code": 404,
      "details": Object {
        "group": "hive.openshift.io",
        "kind": "clusterdeployments",
        "name": "new-cluster",
      },
      "kind": "Status",
      "message": "clusterdeployments.hive.openshift.io \\"new-cluster\\" not found",
      "metadata": Object {},
      "reason": "NotFound",
      "status": "Failure",
    },
  },
}
`;

exports[`Cluster Mutation Correctly Resolves Detach Cluster 1`] = `
Object {
  "data": Object {
    "detachCluster": Object {
      "apiVersion": "v1",
      "code": 404,
      "details": Object {
        "group": "cluster.open-cluster-management.io",
        "kind": "managedclusters",
        "name": "managed-cluster",
      },
      "kind": "Status",
      "message": "managedclusters.cluster.open-cluster-management.io \\"managed-cluster\\" not found",
      "metadata": Object {},
      "reason": "NotFound",
      "status": "Failure",
    },
  },
}
`;

exports[`Cluster Mutation Correctly Resolves Detach Cluster with Failure 1`] = `
Object {
  "data": Object {
    "detachCluster": Object {
      "apiVersion": "v1",
      "code": 404,
      "details": Object {
        "group": "cluster.open-cluster-management.io",
        "kind": "managedclusters",
        "name": "hub-cluster",
      },
      "kind": "Status",
      "message": "managedclusters.cluster.open-cluster-management.io \\"hub-cluster\\" not found",
      "metadata": Object {},
      "reason": "NotFound",
      "status": "Failure",
    },
  },
}
`;

exports[`Cluster Mutation Correctly Resolves Update Cluster Labels 1`] = `
Object {
  "data": Object {
    "updateResourceLabels": "404 page not found
",
  },
}
`;

exports[`Cluster Mutation Create Kubernetes Cluster Resource for Import with Import YAML Problem 1`] = `
Object {
  "data": Object {
    "createCluster": Object {
      "created": Array [],
      "errors": Array [
        Object {
          "message": "Internal error occurred: jsonpatch replace operation does not apply: doc is missing path: /spec/leaseDurationSeconds",
        },
        Object {
          "message": "KlusterletAddonConfig.agent.open-cluster-management.io \\"no-yaml\\" is invalid: [spec.applicationManager: Required value, spec.certPolicyController: Required value, spec.clusterLabels: Required value, spec.clusterNamespace: Required value, spec.iamPolicyController: Required value, spec.policyController: Required value, spec.searchCollector: Required value, spec.version: Required value]",
        },
      ],
      "updated": Array [],
    },
  },
}
`;

exports[`Cluster Mutation Create Kubernetes Cluster Resource for Import with No Namespace 1`] = `
Object {
  "data": Object {
    "createCluster": Object {
      "errors": Array [
        Object {
          "message": "No namespace specified",
        },
      ],
    },
  },
}
`;

exports[`Cluster Resolver Correctly Resolves Cluster Query 1`] = `
Object {
  "data": Object {
    "clusters": Array [
      Object {
        "availableVersions": Array [
          "4.4.12",
          "4.4.17",
          "4.4.15",
          "4.4.14",
          "4.4.16",
          "4.4.11",
          "4.4.13",
        ],
        "clusterip": null,
        "desiredVersion": "4.4.10",
        "distributionVersion": "4.4.10",
        "metadata": Object {
          "creationTimestamp": "2020-08-13T18:17:34Z",
          "labels": Object {
            "cloud": "AWS",
            "environment": "Dev",
            "name": "fxiang",
            "vendor": "OpenShift",
          },
          "name": "fxiang",
          "namespace": "fxiang",
          "uid": "74ef202d-80d6-4d2b-b856-33fe6c94c517",
        },
        "nodes": 6,
        "status": "ok",
        "upgradeFailed": null,
      },
    ],
  },
}
`;

exports[`Cluster Resolver Correctly Resolves ClusterImageSet Query 1`] = `
Object {
  "data": Object {
    "clusterImageSets": Array [
      Object {
        "channel": "fast",
        "name": "img4.3.28-x86-64",
        "platformAws": "true",
        "platformAzure": "true",
        "platformBmc": "",
        "platformGcp": "true",
        "platformVmware": "",
        "releaseImage": "quay.io/openshift-release-dev/ocp-release:4.3.28-x86_64",
        "visible": "true",
      },
      Object {
        "channel": "fast",
        "name": "img4.4.11-x86-64",
        "platformAws": "true",
        "platformAzure": "true",
        "platformBmc": "",
        "platformGcp": "true",
        "platformVmware": "",
        "releaseImage": "quay.io/openshift-release-dev/ocp-release:4.4.11-x86_64",
        "visible": "true",
      },
      Object {
        "channel": "fast",
        "name": "img4.5.2-x86-64",
        "platformAws": "true",
        "platformAzure": "true",
        "platformBmc": "",
        "platformGcp": "true",
        "platformVmware": "",
        "releaseImage": "quay.io/openshift-release-dev/ocp-release:4.5.2-x86_64",
        "visible": "true",
      },
    ],
  },
}
`;

exports[`Cluster Resolver Correctly Resolves Single Cluster Query 1`] = `
Object {
  "data": Object {
    "cluster": Array [
      Object {
        "availableVersions": null,
        "clusterip": null,
        "desiredVersion": null,
        "distributionVersion": null,
        "metadata": null,
        "nodes": null,
        "status": null,
        "upgradeFailed": null,
      },
    ],
  },
}
`;
